# brain-api

./: .dockerignore  .env.example  .gitignore  CONTRACTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_precheck_account_links.py
scripts/: create_admin.py  link_precheck_account.py  seed_admin.py  seed_dev.py
src/brain_api/: __init__.py  config.py  main.py
src/brain_api/api/: admin.py  auth.py  demo.py  deps.py  doctor.py  entitlements.py  health.py  sso.py
src/brain_api/core/: database.py  logging.py  security.py
src/brain_api/models/: __init__.py  demo_request.py  entitlement.py  precheck_link.py  tenant.py  user.py
src/brain_api/schemas/: admin.py  auth.py  demo.py  doctor.py  entitlement.py  secretaria.py  sso.py
src/brain_api/services/: admin.py  auth.py  demo.py  doctor.py  entitlements.py  precheck_client.py  secretaria_client.py  secretaria_internal.py  sso.py
tests/: conftest.py  test_doctor_secretaria.py  test_impersonation.py  test_rbac.py  test_smoke.py
