[project]
name = "brain-api"
version = "0.1.0"
description = "Brain API - identity authority + BFF for the Brain platform (auth, entitlements, demo capture)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "email-validator>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # passlib 1.7.4 (unmaintained) breaks against bcrypt>=4.1 (removed __about__
    # and hard-rejects >72-byte probes in passlib's backend self-test). Pin to the
    # last fully-compatible bcrypt. Revisit if passlib ships a 1.7.5+.
    "bcrypt==4.0.1",
    "structlog>=24.4.0",
    # Async HTTP client for the BFF proxy into PreCheck (services/precheck_client.py).
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    # httpx is also a runtime dep (see [project].dependencies); kept here implicitly.
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brain_api"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["brain_api"]
combine-as-imports = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Header", "fastapi.Query", "fastapi.Security"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
